--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <p style="margin-bottom:2rem; margin-left:0.4rem; margin-top: 2rem; font-size: 20px;"
             class="course-description">
-            GO to Root of Concept,Not Rote the Concept
+            GO to the Root of Concept, Not Rote the Concept.
           </p>
 
           <div class="buttons">
@@ -1236,6 +1236,9 @@
                   </p>
                   <div class="ratingsbyuser">
                     AIR 10
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
 
                   </div>
                 </div>
@@ -1255,6 +1258,9 @@
 
                   <div class="ratingsbyuser">
                     AIR 25
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1275,6 +1281,9 @@
 
                   <div class="ratingsbyuser">
                     AIR 82
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
 
                   </div>
                 </div>
@@ -1295,6 +1304,9 @@
 
                   <div class="ratingsbyuser">
                     AIR 37
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1315,6 +1327,9 @@
 
                   <div class="ratingsbyuser">
                     AIR 778
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1334,6 +1349,9 @@
 
                   <div class="ratingsbyuser">
                     AIR 1092
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1354,6 +1372,9 @@
 
                   <div class="ratingsbyuser">
                     AIR 1012
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1373,6 +1394,9 @@
 
                   <div class="ratingsbyuser">
                     AIR 1694
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1392,6 +1416,10 @@
 
                   <div class="ratingsbyuser">
                     AIR 424
+                    <div> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1413,12 +1441,20 @@
         <h2 class="go-class-head">Go Classes</h2>
         <h3>Our insight to your inbox</h3>
         <div class="social-icons">
-          <i class="footerPills fab fa-twitter"></i>
-          <i class="footerPills fab fa-linkedin"></i>
-          <i class="fa-brands fa-telegram"></i>
-          <i class="fa-brands fa-youtube"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-google-play"></i>
+          <a href="https://www.linkedin.com/company/go-classes/" target="_blank" rel="noopener noreferrer"> <i
+              class="footerPills fab fa-linkedin"></i> </a>
+          <a href="https://youtube.com/@GOClassesforGATECS" target="_blank" rel="noopener noreferrer"><i
+              class="fa-brands fa-youtube"></i></a>
+          <a href="https://t.me/goclasses_cse/" target="_blank" rel="noopener noreferrer"><i
+              class="fa-brands fa-telegram"></i></a>
+          <a href="https://www.instagram.com/goclasses_cse/" target="_blank" rel="noopener noreferrer"><i
+              class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.facebook.com/GoClasses" target="_blank" rel="noopener noreferrer"><i
+              class="fa-brands fa-facebook"></i></a>
+          <a href="https://twitter.com/GOClasses_CSE" target="_blank" rel="noopener noreferrer"><i
+              class="footerPills fab fa-twitter"></i></a>
+          <a href="https://play.google.com/store/apps/details?id=com.goclasses.courses" target="_blank"
+            rel="noopener noreferrer"><i class="fa-brands fa-google-play"></i></a>
         </div>
         <!-- <div class="email-input">
           <input type="email" placeholder="Your Email Address" class="dark-btn"></input>
@@ -1428,18 +1464,18 @@
       <div id="useful-links" class="footer-links">
         <h3 class="orange-head">Useful Links</h3>
         <div class="links">
-          <a href="#">FAQs</a>
-          <a href="#">About Us</a>
-          <a href="#">Contact Us</a>
+          <a href="https://www.goclasses.in/contactus">FAQs</a>
+          <a href="https://www.goclasses.in/contactus">About Us</a>
+          <a href="https://www.goclasses.in/contactus">Contact Us</a>
         </div>
       </div>
 
       <div id="policy-links" class="footer-links">
         <h3 class="orange-head">Policy</h3>
         <div class="links">
-          <a href="#">Terms of Use</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Refund Policy</a>
+          <a href="https://www.goclasses.in/termsofuse">Terms of Use</a>
+          <a href="https://www.goclasses.in/privacypolicy">Privacy Policy</a>
+          <a href="https://www.goclasses.in/refundpolicy">Refund Policy</a>
         </div>
       </div>
 
@@ -1449,7 +1485,7 @@
         <h3 class="orange-head">Contact Us</h3>
         <div class="links">
           <a href="#">+91 9468930964,9499453136</a>
-          <a href="#">contact@goclasses.in</a>
+          <a href="https://www.goclasses.in/contactus">contact@goclasses.in</a>
         </div>
       </div>
 
