--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
           </p>
 
           <div class="buttons">
-            <button id="enroll" class="dark-btn">
-              Enroll Now <i class="material-icons">keyboard_arrow_right</i>
-            </button>
-            <button id="live-classes" class="light-btn">
-              Test Series
-              <i class="material-icons">play_arrow</i>
-            </button>
+            <a href="https://www.goclasses.in/s/pages/gatecompletecourse" target="_blank" rel="noopener noreferrer">
+              <button id="enroll" class="dark-btn">
+                Enroll Now <i class="material-icons">keyboard_arrow_right</i>
+              </button></a>
+            <a href="https://gateoverflow.in/blog/14237/gate-overflow-and-go-classes-test-series-gate-cse-2023"
+              target="_blank" rel="noopener noreferrer"> <button id="live-classes" class="light-btn">
+                Test Series
+                <i class="material-icons">play_arrow</i>
+              </button></a>
           </div>
         </div>
         <div class="testimonials-section">
@@ -175,10 +177,11 @@
           <p>
             Enroll yourself in our top rated Test Series and self evaluate your report
           </p>
-          <button class="dark-btn">
-            Enroll for Test Series
-            <i class="material-icons">keyboard_arrow_right</i>
-          </button>
+          <a href="https://gateoverflow.in/blog/14237/gate-overflow-and-go-classes-test-series-gate-cse-2023"
+            target="_blank" rel="noopener noreferrer"> <button class="dark-btn">
+              Enroll for Test Series
+              <i class="material-icons">keyboard_arrow_right</i>
+            </button></a>
         </div>
         <div class="right">
           <svg width="430" height="362" viewBox="0 0 430 362" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1208,10 +1211,10 @@
             </div>
           </div>
         </div>
-        <button id="contact-us-btn" class="dark-btn">
-          Contact us for more query
-          <i class="material-icons">keyboard_arrow_right</i>
-        </button>
+        <a href="https://www.goclasses.in/contactus"><button id="contact-us-btn" class="dark-btn">
+            Contact us for more query
+            <i class="material-icons">keyboard_arrow_right</i>
+          </button></a>
       </section>
 
       <section id="testimonials">
