--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
   <div class="nothing" id="blur">
     <nav class="menu">
       <div class="container">
-        <img src="./logo/PNGLogo.png" alt="" class="logo" />
+        <a href="#"><img src="./logo/PNGLogo.png" alt="" class="logo" /></a>
         <i class="material-icons" id="menu-open">menu</i>
         <div id="menu-items">
           <a href="#">home</a>
           <a href="#">about</a>
-          <a href="#">courses</a>
-          <a href="#">instructor</a>
-          <a href="#">test series</a>
-          <a href="#">GATE PYQs</a>
-          <a href="#">contact</a>
-          <button id="login">Login / Register</button>
+          <a href="https://www.goclasses.in/s/store">courses</a>
+          <a href="https://play.google.com/store/apps/details?id=com.goclasses.courses">Download app</a>
+          <a href="https://gateoverflow.in/blog/14237/gate-overflow-and-go-classes-test-series-gate-cse-2023">test
+            series</a>
+          <a href="https://t.me/goclasses_cse/">Join Telegram</a>
+          <a href="https://www.goclasses.in/contactus">contact</a>
+          <button id="login"> <a href="https://play.google.com/store/apps/details?id=com.goclasses.courses"> Login /
+              Register </a> </button>
         </div>
       </div>
     </nav>
@@ -849,7 +851,7 @@
             <img src="./assets/testimonails/Data Structure.png" alt="" />
             <p class="price">Data Structures</p>
 
-            <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
+            <a href="https://www.goclasses.in/s/store/courses/description/Data-Structures-2023" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
@@ -904,8 +906,8 @@
             <img
               src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd5880cf24b442d1c8f1e/60fdd5880cf24b442d1c8f1e_scaled_cover.jpg?v=1"
               alt="" />
-            <p class="price">Computer Architecture</p>
-            <a href="https://www.goclasses.in/s/store/courses/description/Computer-Architecture" target="_blank"
+            <p class="price">Compiler Design</p>
+            <a href="https://www.goclasses.in/s/store/courses/description/Compiler-Design" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
@@ -928,9 +930,7 @@
           </div>
 
           <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd8530cf2c7989e1f109d/60fdd8530cf2c7989e1f109d_scaled_cover.jpg?v=1"
-              alt="" />
+            <img src="./assets/testimonails/Aptitude.png" alt="" />
             <p class="price">Aptitude</p>
             <a href="https://www.goclasses.in/s/store/courses/description/Aptitude" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
@@ -956,7 +956,7 @@
             <img src="./assets/testimonails/Data Structure.png" alt="" />
             <p class="price">Data Structures</p>
 
-            <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
+            <a href="https://www.goclasses.in/s/store/courses/description/Data-Structures-2023" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
 
