--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <div class="nothing" id="blur">
     <nav class="menu">
       <div class="container">
-        <a href="#"><img src="./logo/PNGLogo.png" alt="" class="logo" /></a>
+        <a href=""><img src="./logo/PNGLogo.png" alt="" class="logo" /></a>
         <i class="material-icons" id="menu-open">menu</i>
         <div id="menu-items">
-          <a href="#">home</a>
-          <a href="#">about</a>
+          <a href="">home</a>
+          <a href="https://www.goclasses.in/contactus">about</a>
           <a href="https://www.goclasses.in/s/store">courses</a>
           <a href="https://play.google.com/store/apps/details?id=com.goclasses.courses">Download app</a>
           <a href="https://gateoverflow.in/blog/14237/gate-overflow-and-go-classes-test-series-gate-cse-2023">test
